tests/positive/ownership_reinit.tx
class Box {
    value: int;
}

function main() {
    let a = new Box();
    let b = a; // 'a' moved
    a = new Box(); // 'a' reinitialized
    print(a.value); // OK
}
