tests/negative/oop/invalid_extends.tx
// EXPECTED: COMPILE_ERROR
// Description: Verify that extending a non-existent class causes a compile error.

class Child extends NonExistentParent {
    x: int;
}

function main() {
    let c = new Child();
}
